:sparkles: feat(publish): publish引入shelljs

--- a/packages/publish-flow/package.json
+++ b/packages/publish-flow/package.json
@@ -6,13 +6,19 @@
   "main": "index.js",
   "scripts": {
     "start": "tsup --watch",
-    "build": "tsup"
+    "build": "tsup",
+    "test":"node ./src/index.ts"
   },
   "keywords": [],
   "author": "饶驹",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.11.18",
+    "@types/shelljs": "^0.8.11",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "shelljs": "^0.8.5"
   }
 }
