--- a/packages/publish-flow/tsconfig.json
+++ b/packages/publish-flow/tsconfig.json
@@ -1,30 +1,12 @@
 {
-  "include": ["src"],
+  "extends":"../../tsconfig.json",
+  "include": ["./src/**/*.ts"],
   "compilerOptions": {
-    "target": "es2016",
-    "module": "CommonJS",
-    "lib": ["dom", "esnext"],
-    "importHelpers": true,
-    "declaration": true,
-    "sourceMap": true,
-    "rootDir": "./",
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictPropertyInitialization": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node",
+    "target": "ES5",
+    "module":"CommonJS",
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"]
-    },
-    "jsx": "react",
-    "esModuleInterop": true
+      "@/*": ["src/*"],
+    }
   }
 }
