--- a/packages/publish-flow/tsconfig.json
+++ b/packages/publish-flow/tsconfig.json
@@ -2,8 +2,9 @@
   "extends":"../../tsconfig.json",
   "include": ["./src/**/*.ts"],
   "compilerOptions": {
-    "target": "ES5",
+    "target": "ES2016",
     "module":"CommonJS",
+    "outDir": "./dist",
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"],
