:rocket: chore(cz): 打包

--- a/packages/publish-flow/package.json
+++ b/packages/publish-flow/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@laz/publish-flow",
+  "name": "@lzbbb/publish-flow",
   "version": "1.0.0",
   "description": "jenkins auto publish",
   "private": false,
