--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "version-packages": "changeset version",
     "release": "pnpm build && pnpm release:only",
     "release:only": "changeset publish --registry=https://registry.npmjs.com/",
-    "commit": "cz-customizable"
+    "cz": "cz-customizable"
   },
   "keywords": [],
   "author": "饶驹",
