--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "commitizen": "^4.2.6",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^7.0.0",
-    "eslint": "^8.31.0",
+    "eslint": "^8.22.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.1.0"
+    "lint-staged": "^13.1.0",
+    "rimraf": "^4.0.7"
   },
   "lint-staged": {
     "*.ts": [
