--- a/packages/lzb-cli/package.json
+++ b/packages/lzb-cli/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@lzbbb/publish-flow",
+  "name": "@lzbbb/cli",
   "version": "2.0.2",
   "description": "jenkins auto publish",
   "private": false,
   "main": "index.js",
   "bin": {
-    "laz-cli": "./bin/index.js"
+    "lzb": "./bin/index.js"
   },
   "scripts": {
     "start": "tsup --watch",
-    "build": "tsup"
+    "build": "rimraf ./dist && tsup"
   },
   "publishConfig": {
     "access": "public"
@@ -25,12 +25,21 @@
   "author": "饶驹",
   "license": "ISC",
   "devDependencies": {
+    "@types/inquirer": "^9.0.3",
     "@types/node": "^18.11.18",
+    "@types/npmlog": "^4.1.4",
     "@types/shelljs": "^0.8.11",
-    "tsup": "^6.5.0",
-    "typescript": "^4.9.4"
+    "tsup": "^6.5.0"
   },
   "dependencies": {
-    "shelljs": "^0.8.5"
+    "commander": "^10.0.0",
+    "conf": "^10.1.1",
+    "import-local": "^3.1.0",
+    "inquirer": "^9.1.4",
+    "npmlog": "^7.0.1",
+    "semver": "^7.3.8",
+    "shelljs": "^0.8.5",
+    "tslib": "^2.4.1",
+    "zx": "^7.1.1"
   }
 }
