--- a/packages/lzb-cli/package.json
+++ b/packages/lzb-cli/package.json
@@ -34,8 +34,9 @@
   "dependencies": {
     "commander": "^10.0.0",
     "conf": "^10.1.1",
+    "execa": "^6.1.0",
     "import-local": "^3.1.0",
-    "inquirer": "^9.1.4",
+    "inquirer": "^8.0.0",
     "npmlog": "^7.0.1",
     "semver": "^7.3.8",
     "shelljs": "^0.8.5",
