--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "preinstall": "npx only-allow pnpm && husky install",
-    "build": "pnpm --filter=@laz/* run build",
+    "build": "pnpm --filter=@lzbbb/* run build",
     "clear": "rimraf 'packages/*/{lib,node_modules}' && rimraf node_modules",
-    "changeset": "changeset && changeset version && pnpm release",
+    "changeset": "changeset && changeset version && pnpm release --registry=https://registry.npmjs.com/",
     "version-packages": "changeset version",
     "release": "pnpm build && pnpm release:only",
     "release:only": "changeset publish --registry=https://registry.npmjs.com/",
