✨ feat(deploy): 支持windows系统，本地上传uni-app功能；支持 debug 日志

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "preinstall": "npx only-allow pnpm && husky install",
     "build": "pnpm --filter=@lzbbb/* run build",
     "clear": "rimraf 'packages/*/{lib,node_modules}' && rimraf node_modules",
-    "changeset": "changeset && changeset version && pnpm release --registry=https://registry.npmjs.com/",
+    "changeset": "changeset && changeset version && pnpm release",
     "version-packages": "changeset version",
     "release": "pnpm build && pnpm release:only",
     "release:only": "changeset publish --registry=https://registry.npmjs.com/",
