--- a/packages/lzb-cli/package.json
+++ b/packages/lzb-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lzbbb/cli",
-  "version": "4.0.1",
+  "version": "5.0.0",
   "description": "jenkins auto publish",
   "private": false,
   "main": "index.js",
@@ -40,7 +40,6 @@
     "npmlog": "^7.0.1",
     "semver": "^7.3.8",
     "shelljs": "^0.8.5",
-    "tslib": "^2.4.1",
-    "zx": "^7.1.1"
+    "tslib": "^2.4.1"
   }
 }
