✨ feat(upload): 新增 upload 上传到 github.io

--- a/packages/lzb-cli/tsconfig.json
+++ b/packages/lzb-cli/tsconfig.json
@@ -6,8 +6,9 @@
     "module":"CommonJS",
     "outDir": "./dist",
     "baseUrl": "./",
+    "noImplicitAny": false,
     "paths": {
-      "@/*": ["src/*"],
+      "@/*": ["src/*"]
     }
   }
 }
