--- a/packages/i18n-util/package.json
+++ b/packages/i18n-util/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.2.1",
     "axios-jsonp": "^1.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@react-buddy/ide-toolbox": "^2.3.1",
+    "@react-buddy/palette-antd": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
