🐛 fix(修复上传单个文件路径错误问题):

--- a/packages/lzb-cli/package.json
+++ b/packages/lzb-cli/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@lzbbb/cli",
-  "version": "6.2.0",
+  "version": "6.2.2",
   "description": "jenkins auto publish",
   "private": false,
   "main": "index.js",
   "bin": {
-    "lzb": "./bin/index.js"
+    "rr": "./bin/index.js"
   },
   "scripts": {
     "start": "tsup --watch",
