--- a/packages/lzb-cli/package.json
+++ b/packages/lzb-cli/package.json
@@ -12,7 +12,7 @@
     "build": "rimraf ./dist && tsup"
   },
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   },
   "files": [
     "dist",
